--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -13,7 +13,7 @@ body {
 }
 
 img {
-  max-width: 250px;
+  max-width: 100%;
 }
 
 a {
@@ -25,9 +25,16 @@ a:hover {
   text-decoration: none;
 }
 
+.btn {
+  padding: 9px 20px;
+  margin-left: 16px;
+}
+
 .btn-primary {
   background: #44c373;
   border-color: #44c373;
+  box-shadow: inset 0px 2px 2px #8FEAB1, inset 0px -2px 2px rgba(0, 99, 28, 0.3);
+  border-radius: 38px;
 }
 
 .btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:not(:disabled):not(.disabled):active {
@@ -42,6 +49,8 @@ a:hover {
 .btn-danger {
   background: #eb5757;
   border-color: #EB5757;
+  box-shadow: inset 0px 2px 2px rgba(255, 255, 255, 0.25), inset 0px -2px 2px #C93D2E;
+  border-radius: 38px;
 }
 
 .btn-danger:hover, .btn-danger:active, .btn-danger:focus, .btn-danger:not(:disabled):not(.disabled):active {
@@ -62,8 +71,22 @@ h1 {
 
 h2 {
   font-size: 20px;
-  line-height: 37px;
+  font-weight: 600;
+  line-height: 2.2;
   margin-bottom: 0;
+}
+
+h2 a {
+  color: #202020;
+}
+
+h2 a:hover {
+  color: #44c373;
+}
+
+h2 i {
+  color: #44c373;
+  margin-right: 8px;
 }
 
 h3 {
@@ -183,10 +206,50 @@ h3 {
   font-weight: 600;
   opacity: 0.5;
   color: #202020;
+  position: relative;
+  display: inline-block;
+  margin: 0 80px 12px 0;
+}
+
+.admin-navigation ul a:hover {
+  color: #44c373;
+  opacity: 1;
 }
 
 .admin-navigation ul a.active {
   opacity: 1;
+}
+
+.admin-navigation ul a.active:after {
+  content: '';
+  width: 100%;
+  height: 5px;
+  border-radius: 19px;
+  background: #44c373;
+  position: absolute;
+  left: 0;
+  bottom: -12px;
+}
+
+.card {
+  border: none;
+}
+
+.card-header {
+  padding: 0;
+  background: #F8F8F8;
+  border-radius: 8px 8px 0px 0px;
+  border: none;
+  padding: 20px;
+}
+
+.card-body {
+  padding: 20px;
+  border: none;
+}
+
+.card-body img {
+  border-radius: 8px;
 }
 
 .table {
@@ -225,9 +288,10 @@ h3 {
 }
 
 label {
-  margin: 20px 0;
+  margin: 0 0 20px;
   display: block;
   color: #828282;
+  font-size: 14px;
 }
 
 label img {
