--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body {
   max-width: 100%;
   overflow-x: hidden;
@@ -350,6 +351,33 @@ input[type="file"] {
   border: none;
   padding: 0;
   border-radius: 0;
+}
+
+.input-file {
+  position: relative;
+  padding: 0 0 0 46px;
+}
+
+.input-file:before {
+  content: 'Выберите файл';
+  background: #FFFFFF;
+  box-shadow: inset 0px -2px 2px rgba(185, 185, 185, 0.3);
+  border-radius: 38px;
+  color: #44c373;
+  position: absolute;
+  left: 0;
+  padding: 9px 22px;
+}
+
+.input-file input[type="file"] {
+  opacity: 0;
+}
+
+.input-file #file-name {
+  position: absolute;
+  left: 174px;
+  top: 8px;
+  font-size: 16px;
 }
 
 .checkbox {
