--- a/resources/sass/admin.sass
+++ b/resources/sass/admin.sass
@@ -283,6 +283,26 @@ input[type="file"]
     padding: 0
     border-radius: 0
 
+.input-file
+    position: relative
+    padding: 0 0 0 46px
+    &:before
+        content: 'Выберите файл'
+        background: #FFFFFF
+        box-shadow: inset 0px -2px 2px rgba(185, 185, 185, 0.3)
+        border-radius: 38px
+        color: $main
+        position: absolute
+        left: 0
+        padding: 9px 22px
+    input[type="file"]
+        opacity: 0
+    #file-name
+        position: absolute
+        left: 174px
+        top: 8px
+        font-size: 16px
+
 .checkbox
     font-size: 14px
     margin: 0 0 10px
