--- a/resources/sass/admin.sass
+++ b/resources/sass/admin.sass
@@ -34,12 +34,12 @@ a
 .btn
     padding: 9px 20px
     margin-left: 16px
+    border-radius: 38px
 
 .btn-primary
     background: $main
     border-color: $main
     box-shadow: inset 0px 2px 2px #8FEAB1, inset 0px -2px 2px rgba(0, 99, 28, 0.3)
-    border-radius: 38px
     &:hover,
     &:active,
     &:focus,
@@ -54,7 +54,6 @@ a
     background: #eb5757
     border-color: #EB5757
     box-shadow: inset 0px 2px 2px rgba(255, 255, 255, 0.25), inset 0px -2px 2px #C93D2E
-    border-radius: 38px
     &:hover,
     &:active,
     &:focus,
@@ -154,12 +153,26 @@ h3
             background-color: $main
             background-image: url('../img/common/admin-arrow-active.svg')
             color: $white
-            svg path
-                fill: $white
-                opacity: 1
+            svg
+                path
+                    fill: $white
+                    opacity: 1
+                g
+                    opacity: 1
+            span
+                color: $white
     &__user
         border-top: 1px solid #00000010
         padding: 35px 35px 0
+
+    &::-webkit-scrollbar
+        width: 4px
+        background: $bg
+        border-radius: 4px
+
+    &::-webkit-scrollbar-thumb
+        background: $main
+        border-radius: 4px
 
 
 .admin-panel
@@ -218,8 +231,10 @@ h3
         width: 85px
     td
         vertical-align: middle
+        white-space: nowrap
     img
         width: 100%
+        max-width: 150px
         height: 40px
         object-fit: cover
         object-position: center
@@ -285,7 +300,7 @@ input[type="file"]
 
 .input-file
     position: relative
-    padding: 0 0 0 46px
+    cursor: pointer
     &:before
         content: 'Выберите файл'
         background: #FFFFFF
@@ -295,8 +310,10 @@ input[type="file"]
         position: absolute
         left: 0
         padding: 9px 22px
+        cursor: pointer
     input[type="file"]
         opacity: 0
+        cursor: pointer
     #file-name
         position: absolute
         left: 174px
