add modals but not automated

--- a/resources/sass/admin.sass
+++ b/resources/sass/admin.sass
@@ -231,6 +231,7 @@ h3
         width: 85px
     td
         vertical-align: middle
+    td:nth-child(2)
         white-space: nowrap
     img
         width: 100%
