--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -1405,6 +1405,8 @@ footer
         a
             color: $text-light
             font-weight: 400
+            &:hover
+                color: $main
     &__menu
         display: flex
         justify-content: center
