--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1317,11 +1317,6 @@ header .close {
   border-radius: 8px;
   margin-bottom: 15px;
   transition: .3s;
-  background: url("/../img/discounts/clock.svg") left center no-repeat;
-  background-font-size: 11px;
-  background-font-weight: 400;
-  background-padding-left: 20px;
-  background-margin-bottom: 0;
 }
 
 .discount-other h3 {
@@ -1343,6 +1338,11 @@ header .close {
 
 .discount-other__time {
   color: #828282;
+  background: url("/../img/discounts/clock.svg") left center no-repeat;
+  font-size: 11px;
+  font-weight: 400;
+  padding-left: 20px;
+  margin-bottom: 0;
 }
 
 .discount-other:hover {
