--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1633,6 +1633,50 @@ header .close {
   }
 }
 
+.suggestion {
+  position: relative;
+}
+
+.suggestion__inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 1px solid #E0E0E0;
+  border-radius: 8px;
+  background: #FFF;
+  max-height: 100px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 290px;
+}
+
+.suggestion__inner label {
+  height: auto;
+  width: 100%;
+  margin: 0;
+  cursor: pointer;
+}
+
+.suggestion__inner label:hover {
+  background: #f2f2f2;
+}
+
+.suggestion__inner::-webkit-scrollbar {
+  width: 4px;
+  background: #f2f2f2;
+  border-radius: 4px;
+}
+
+.suggestion__inner::-webkit-scrollbar-thumb {
+  background: #44C373;
+  border-radius: 4px;
+}
+
+.suggestion__text {
+  width: 100%;
+  padding: 0 14px;
+}
+
 footer {
   background: #FFFFFF;
   padding: 18px 0;
