--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -1371,6 +1371,36 @@ header
             font-size: 16px
         &__img
             margin: 30px 0
+.suggestion
+    position: relative
+    &__inner
+        position: absolute
+        top: 0
+        left: 0
+        border: 1px solid #E0E0E0
+        border-radius: 8px
+        background: #FFF
+        max-height: 100px
+        overflow-x: hidden
+        overflow-y: auto
+        width: 290px
+        label
+            height: auto
+            width: 100%
+            margin: 0
+            cursor: pointer
+            &:hover
+                background: #f2f2f2
+        &::-webkit-scrollbar
+            width: 4px
+            background: $bg
+            border-radius: 4px
+        &::-webkit-scrollbar-thumb
+            background: $main
+            border-radius: 4px
+    &__text
+        width: 100%
+        padding: 0 14px
 
 footer
     background: $white
