--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -111,7 +111,8 @@ button,
     align-items: center
     font-weight: 700
     padding: 20px 0
-
+    div
+        display: flex
     span
         position: relative
         font-size: 12px
