--- a/public/css/main.css
+++ b/public/css/main.css
@@ -407,7 +407,7 @@ input:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 0 0 1px;
+  padding: 2px 0 0 1px;
   box-shadow: none !important;
   transition: .3s;
 }
