--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -359,7 +359,7 @@ input
         display: flex
         justify-content: center
         align-items: center
-        padding: 0 0 0 1px
+        padding: 2px 0 0 1px
         box-shadow: none !important
         transition: .3s
 
