--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -750,7 +750,7 @@ header
     padding: 10px 0
     background: $bg
     position: fixed
-    width: 100%
+    width: 100vw
     top: 0
     z-index: 10
     .custom-logo
