--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -296,9 +296,12 @@ input
             border: 1px solid #E0E0E0
 
         &:after
+            content: ''
             background-image: url('/../img/common/check.svg')
             position: absolute
-            top: 3px
+            width: 14px
+            height: 14px
+            top: 5px
             left: 3px
             opacity: 0
 
@@ -910,6 +913,13 @@ header
             .close
                 display: block
 
+    .pr
+        .vm--modal
+            top: 35px !important
+            height: calc(100% - 35px) !important
+        .product-modal
+            max-height: 100vh
+
 @media (max-width: 400px)
     header
         .hamburger
@@ -1331,6 +1341,59 @@ header
     img
         margin-bottom: 20px
 
+.order
+    padding: 0 0 60px
+    &__block
+        background: $white
+        border-radius: 10px
+        padding: 15px 15px 0
+        margin-bottom: 20px
+        h2
+            font-size: 15px
+            margin-bottom: 10px
+    &__delivery
+        color: $text-light
+        margin-bottom: 24px
+    &__order
+        margin-bottom: 20px
+    .checkbox__text
+        white-space: nowrap
+
+@media (min-width: 992px)
+    .order
+        &__block
+            &-delivery
+                display: flex
+                align-items: center
+                margin-bottom: 20px
+                .product-item__variants
+                    width: 258px
+                    margin: 0 30px 0 0
+            &-pay
+                .product-item__variants
+                        width: 384px
+                p
+                    width: 396px
+                    font-size: 16px
+                    line-height: 19px
+                    color: $text-light
+        &__delivery
+            margin-bottom: 0
+
+@media (min-width: 1200px)
+    .order
+        &__block
+            padding: 28px 30px
+            margin-bottom: 35px
+            h2
+                font-size: 20px
+                line-height: 24px
+                margin-bottom: 16px
+                &:nth-child(3)
+                    font-size: 16px
+                    line-height: 19px
+            &-delivery
+                margin-bottom: 38px
 
 .success
     text-align: center
@@ -1462,6 +1525,24 @@ footer
         padding: 15px 0 20px
         img
             margin: 0 5px 10px
+
+#to_top
+    width: 40px
+    height: 40px
+    background: $white
+    display: flex
+    justify-content: center
+    align-items: center
+    transform: rotate(90deg)
+    position: fixed
+    right: 20px
+    bottom: 20px
+    border-radius: 50%
+    box-shadow: 1px 1px 4px rgba(64, 94, 72, 0.1)
+    cursor: pointer
+    opacity: .7
+    &:hover
+        opacity: 1
 
 @media (min-width: 1200px)
     footer
