--- a/resources/sass/admin.sass
+++ b/resources/sass/admin.sass
@@ -90,7 +90,8 @@ h3
     margin: 0
 
 .button-logout
-    padding: 3px 16px
+    padding: 3px
+    width: 44px
     background: rgba(68, 195, 115, 0.2)
     box-shadow: inset 0px -2px 2px rgba(68, 195, 115, 0.3)
     border: none
@@ -118,6 +119,7 @@ h3
     flex-direction: column
     justify-content: space-between
     filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.05))
+    z-index: 2
     .custom-logo
         margin: 0 auto 27px
         display: block
@@ -232,6 +234,8 @@ h3
     td
         vertical-align: middle
     td:nth-child(2)
+        white-space: nowrap
+    td:last-child
         white-space: nowrap
     img
         width: 100%
@@ -389,6 +393,44 @@ ul
     list-style: none
 
 @media (max-width: 1199px)
+    .admin-navbar
+        width: 100%
+        height: 60px
+        padding: 10px 15px
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
+        .custom-logo
+            width: 100px
+            margin: 0 10px 0 0
+        &__menu
+            display: flex
+            justify-content: space-between
+            align-items: center
+            ul
+                display: flex
+                align-items: center
+                margin: 0
+        &__link
+            padding: 8px
+            background-image: none
+            text-align: center
+            &.active
+                background-image: none
+            span
+                position: static
+            svg
+                display: none
+        &__user
+            padding: 0
+            border: none
+            ul
+                margin: 0
+        .user-logout
+            span
+                display: none
+    .admin-panel
+        padding: 0
     .composition
         .checkbox
             width: 33%
@@ -398,7 +440,50 @@ ul
         .checkbox
             width: 50%
 
+@media (max-width: 767px)
+    h1
+        font-size: 20px
+        margin-bottom: 10px
+    h2
+        font-size: 18px
+    .container-sm,
+    .container
+        max-width: 100%
+    .admin-navigation
+        padding: 70px 0 0
+        ul
+            a
+                margin: 0 30px 12px 0
+    .admin-navbar
+        &::-webkit-scrollbar
+            height: 4px
+        &__menu
+            padding: 0
+            margin-right: 20px
+        &__link
+            white-space: nowrap
+        &__user
+            padding-right: 20px
+    .admin-panel
+        font-size: 14px
+
 @media (max-width: 575px)
     .composition
         .checkbox
             width: 100%
+    .admin-navigation
+        ul
+            a
+                padding: 0 6px 12px 0
+    .table-outer
+        overflow-x: auto
+        &::-webkit-scrollbar
+            height: 4px
+            background: $bg
+            border-radius: 4px
+        &::-webkit-scrollbar-thumb
+            background: $main
+            border-radius: 4px
+    .table
+        td
+            white-space: nowrap
