bug fixies, route to categories

--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -588,6 +588,11 @@ textarea
         font-weight: 700
         line-height: 19px
 
+    img
+        height: 170px
+        display: block
+        margin-bottom: 20px
+
     .product-item__variants
         width: 258px
 
@@ -687,6 +692,7 @@ textarea
     .modaladdress
         .vm--modal
             padding: 35px 40px
+            height: 470px !important
 
 @media (min-width: 1200px)
     body
