--- a/public/css/main.css
+++ b/public/css/main.css
@@ -667,6 +667,12 @@ textarea:focus {
   line-height: 19px;
 }
 
+.modaladdress img {
+  height: 170px;
+  display: block;
+  margin-bottom: 20px;
+}
+
 .modaladdress .product-item__variants {
   width: 258px;
 }
@@ -783,6 +789,7 @@ textarea:focus {
   }
   .modaladdress .vm--modal {
     padding: 35px 40px;
+    height: 470px !important;
   }
 }
 
