--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,1 +1,623 @@
-@charset "UTF-8";body,html{max-width:100%;overflow-x:hidden}body{background:#f2f2f2;color:#202020;font-family:Inter;font-size:16px;font-weight:500;overflow-y:initial}img{max-width:100%}a{color:#44c373}a:hover{color:#008f28;text-decoration:none}.btn{padding:9px 20px;margin-left:16px;border-radius:38px}.btn-primary{background:#44c373;border-color:#44c373;box-shadow:inset 0 2px 2px #8feab1,inset 0 -2px 2px rgba(0,99,28,.3)}.btn-primary:active,.btn-primary:focus,.btn-primary:hover,.btn-primary:not(:disabled):not(.disabled):active{background:#008f28;border-color:#008f28}.btn-primary:focus,.btn-primary:not(:disabled):not(.disabled):active{box-shadow:0 0 0 .2rem rgba(68,195,115,.25)}.btn-danger{background:#eb5757;border-color:#eb5757;box-shadow:inset 0 2px 2px hsla(0,0%,100%,.25),inset 0 -2px 2px #c93d2e}.btn-danger:active,.btn-danger:focus,.btn-danger:hover,.btn-danger:not(:disabled):not(.disabled):active{background:#b71a0a;border-color:#b71a0a}.btn-danger:focus,.btn-danger:not(:disabled):not(.disabled):active{box-shadow:0 0 0 .2rem rgba(235,87,87,.25)}h1{font-size:30px;line-height:36px;font-weight:700;margin-bottom:26px}h2{font-size:20px;font-weight:600;line-height:2.2;margin-bottom:0}h2 a{color:#202020}h2 a:hover,h2 i{color:#44c373}h2 i{margin-right:8px}h3{font-size:18px}.col-form-label{margin:0}.button-logout{padding:3px;width:44px;background:rgba(68,195,115,.2);box-shadow:inset 0 -2px 2px rgba(68,195,115,.3);border:none;border-radius:38px;transition:.3s}.button-logout:hover{background:rgba(68,195,115,.5)}.user-logout{align-items:center}.admin-navbar,.user-logout{display:flex;justify-content:space-between}.admin-navbar{position:fixed;top:0;left:0;width:270px;height:100vh;overflow-y:auto;background:#fff;padding:38px 0;flex-direction:column;filter:drop-shadow(0 4px 10px rgba(0,0,0,.05));z-index:2}.admin-navbar .custom-logo{margin:0 auto 27px;display:block;width:100%;text-align:center}.admin-navbar__menu{padding:0 19px}.admin-navbar__link{display:flex;justify-content:flex-start;align-items:center;background-image:url(/images/admin-arrow.svg?b4d718298744e135776df199c820fc3a);background-position:center right 20px;background-repeat:no-repeat;position:relative;padding:15px 15px 15px 52px;border-radius:8px;color:#202020;font-weight:600;font-size:14px;line-height:17px}.admin-navbar__link svg{position:absolute;left:19px}.admin-navbar__link span{position:absolute;right:40px;background:rgba(252,143,0,.2);color:#fc8f00;border-radius:4px;padding:2px 8px}.admin-navbar__link.active{background-color:#44c373;background-image:url(/images/admin-arrow-active.svg?3f876a0bd0816e20fb0eb52ea56d7a04);color:#fff}.admin-navbar__link.active svg path{fill:#fff;opacity:1}.admin-navbar__link.active svg g{opacity:1}.admin-navbar__link.active span{color:#fff}.admin-navbar__user{border-top:1px solid rgba(0,0,0,.06274509803921569);padding:35px 35px 0}.admin-navbar::-webkit-scrollbar{width:4px;background:#f2f2f2;border-radius:4px}.admin-navbar::-webkit-scrollbar-thumb{background:#44c373;border-radius:4px}.admin-panel{padding:0 0 20px 270px}.admin-navigation{background:#fff;margin-bottom:30px;padding:106px 0 0}.admin-navigation ul{display:flex}.admin-navigation ul a{font-weight:600;opacity:.5;color:#202020;position:relative;display:inline-block;margin:0 80px 12px 0}.admin-navigation ul a:hover{color:#44c373;opacity:1}.admin-navigation ul a.active{opacity:1}.admin-navigation ul a.active:after{content:"";width:100%;height:5px;border-radius:19px;background:#44c373;position:absolute;left:0;bottom:-12px}.card{border:none}.card-header{background:#f8f8f8;border-radius:8px 8px 0 0}.card-body,.card-header{border:none;padding:20px}.card-body img{border-radius:8px}.table{margin:20px 0 0}.table th:first-child{width:50px}.table th:nth-child(2){width:85px}.table td{vertical-align:middle}.table td:last-child,.table td:nth-child(2){white-space:nowrap}.table img{width:100%;max-width:150px;height:40px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center}.table img.icon{width:40px;-o-object-fit:contain;object-fit:contain}.card{margin-bottom:20px}label{margin:0 0 20px;display:block;color:#828282;font-size:14px}label img{display:block;margin:20px 0}input,select{width:100%;border:1px solid #e0e0e0;border-radius:8px;font-size:14px;font-weight:500;height:40px;margin:4px 0 0;padding:2px 16px;-webkit-appearance:none;-moz-appearance:none;appearance:none}input:focus,select:focus{outline:none;border:1px solid #44c373}select{background-image:url(/images/select.svg?06e9b87ef1d6f05e021915a8031c51bc);background-position:center right 10px;background-repeat:no-repeat}textarea{width:100%;border:1px solid #e0e0e0;border-radius:8px;font-size:14px;font-weight:500;height:300px;margin:4px 0 0;padding:2px 16px;-webkit-appearance:none;-moz-appearance:none;appearance:none;resize:none}textarea:focus{outline:none;border:1px solid #44c373}input[type=file]{border:none;padding:0;border-radius:0}.input-file{position:relative;cursor:pointer}.input-file:before{content:"Выберите файл";background:#fff;box-shadow:inset 0 -2px 2px hsla(0,0%,72.5%,.3);border-radius:38px;color:#44c373;position:absolute;left:0;padding:9px 22px;cursor:pointer}.input-file input[type=file]{opacity:0;cursor:pointer}.input-file #file-name{position:absolute;left:174px;top:8px;font-size:16px}.checkbox{font-size:14px;margin:0 0 10px}.checkbox input{position:absolute;z-index:-1;opacity:0}.checkbox__text{position:relative;padding:0 0 0 30px;cursor:pointer}.checkbox__text:before{content:"";position:absolute;top:2px;left:0;width:20px;height:20px;border-radius:5px;border:1px solid #e0e0e0}.checkbox__text:after{content:url(/images/check.svg?7b749f8342012ce5175b8abef29996a4);position:absolute;top:3px;left:3px;opacity:0}.checkbox input:checked+.checkbox__text:before{background:#44c373;border:1px solid #44c373}.checkbox input:checked+.checkbox__text:after{opacity:1}.radio{margin:0;height:100%}.radio input{position:absolute;z-index:-1;opacity:0;margin:10px 0 0 7px;height:auto}.radio__text{position:relative;cursor:pointer;text-align:center;height:100%;display:flex;justify-content:center;align-items:center;border-radius:20px}.radio input:checked+.radio__text{color:#44c373;background:#fff;box-shadow:0 4px 3px rgba(64,94,72,.1)}.composition{display:flex;flex-wrap:wrap}.composition .checkbox{width:25%}ul{padding:0;list-style:none}@media (max-width:1199px){.admin-navbar{width:100%;height:60px;padding:10px 15px;flex-direction:row;justify-content:space-between;align-items:center}.admin-navbar .custom-logo{width:100px;margin:0 10px 0 0}.admin-navbar__menu{display:flex;justify-content:space-between;align-items:center}.admin-navbar__menu ul{display:flex;align-items:center;margin:0}.admin-navbar__link{padding:8px;text-align:center}.admin-navbar__link,.admin-navbar__link.active{background-image:none}.admin-navbar__link span{position:static}.admin-navbar__link svg{display:none}.admin-navbar__user{padding:0;border:none}.admin-navbar__user ul{margin:0}.admin-navbar .user-logout span{display:none}.admin-panel{padding:0}.composition .checkbox{width:33%}}@media (max-width:991px){.composition .checkbox{width:50%}}@media (max-width:767px){h1{font-size:20px;margin-bottom:10px}h2{font-size:18px}.container,.container-sm{max-width:100%}.admin-navigation{padding:70px 0 0}.admin-navigation ul a{margin:0 30px 12px 0}.admin-navbar::-webkit-scrollbar{height:4px}.admin-navbar__menu{padding:0;margin-right:20px}.admin-navbar__link{white-space:nowrap}.admin-navbar__user{padding-right:20px}.admin-panel{font-size:14px}}@media (max-width:575px){.composition .checkbox{width:100%}.admin-navigation ul a{padding:0 6px 12px 0}.table-outer{overflow-x:auto}.table-outer::-webkit-scrollbar{height:4px;background:#f2f2f2;border-radius:4px}.table-outer::-webkit-scrollbar-thumb{background:#44c373;border-radius:4px}.table td{white-space:nowrap}}
+@charset "UTF-8";
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  background: #f2f2f2;
+  color: #202020;
+  font-family: 'Inter';
+  font-size: 16px;
+  font-weight: 500;
+  overflow-y: initial;
+}
+
+img {
+  max-width: 100%;
+}
+
+a {
+  color: #44c373;
+}
+
+a:hover {
+  color: #008F28;
+  text-decoration: none;
+}
+
+.btn {
+  padding: 9px 20px;
+  margin-left: 16px;
+  border-radius: 38px;
+}
+
+.btn-primary {
+  background: #44c373;
+  border-color: #44c373;
+  box-shadow: inset 0px 2px 2px #8FEAB1, inset 0px -2px 2px rgba(0, 99, 28, 0.3);
+}
+
+.btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:not(:disabled):not(.disabled):active {
+  background: #008F28;
+  border-color: #008F28;
+}
+
+.btn-primary:focus, .btn-primary:not(:disabled):not(.disabled):active {
+  box-shadow: 0 0 0 0.2rem rgba(68, 195, 115, 0.25);
+}
+
+.btn-danger {
+  background: #eb5757;
+  border-color: #EB5757;
+  box-shadow: inset 0px 2px 2px rgba(255, 255, 255, 0.25), inset 0px -2px 2px #C93D2E;
+}
+
+.btn-danger:hover, .btn-danger:active, .btn-danger:focus, .btn-danger:not(:disabled):not(.disabled):active {
+  background: #B71A0A;
+  border-color: #B71A0A;
+}
+
+.btn-danger:focus, .btn-danger:not(:disabled):not(.disabled):active {
+  box-shadow: 0 0 0 0.2rem rgba(235, 87, 87, 0.25);
+}
+
+h1 {
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  margin-bottom: 26px;
+}
+
+h2 {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 2.2;
+  margin-bottom: 0;
+}
+
+h2 a {
+  color: #202020;
+}
+
+h2 a:hover {
+  color: #44c373;
+}
+
+h2 i {
+  color: #44c373;
+  margin-right: 8px;
+}
+
+h3 {
+  font-size: 18px;
+}
+
+.col-form-label {
+  margin: 0;
+}
+
+.button-logout {
+  padding: 3px;
+  width: 44px;
+  background: rgba(68, 195, 115, 0.2);
+  box-shadow: inset 0px -2px 2px rgba(68, 195, 115, 0.3);
+  border: none;
+  border-radius: 38px;
+  transition: .3s;
+}
+
+.button-logout:hover {
+  background: rgba(68, 195, 115, 0.5);
+}
+
+.user-logout {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.admin-navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 270px;
+  height: 100vh;
+  overflow-y: auto;
+  background: #FFFFFF;
+  padding: 38px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.05));
+  z-index: 2;
+}
+
+.admin-navbar .custom-logo {
+  margin: 0 auto 27px;
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+.admin-navbar__menu {
+  padding: 0 19px;
+}
+
+.admin-navbar__link {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-image: url(/images/admin-arrow.svg?b4d718298744e135776df199c820fc3a);
+  background-position: center right 20px;
+  background-repeat: no-repeat;
+  position: relative;
+  padding: 15px 15px 15px 52px;
+  border-radius: 8px;
+  color: #202020;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.admin-navbar__link svg {
+  position: absolute;
+  left: 19px;
+}
+
+.admin-navbar__link span {
+  position: absolute;
+  right: 40px;
+  background: rgba(252, 143, 0, 0.2);
+  color: #FC8F00;
+  border-radius: 4px;
+  padding: 2px 8px;
+}
+
+.admin-navbar__link.active {
+  background-color: #44c373;
+  background-image: url(/images/admin-arrow-active.svg?3f876a0bd0816e20fb0eb52ea56d7a04);
+  color: #FFFFFF;
+}
+
+.admin-navbar__link.active svg path {
+  fill: #FFFFFF;
+  opacity: 1;
+}
+
+.admin-navbar__link.active svg g {
+  opacity: 1;
+}
+
+.admin-navbar__link.active span {
+  color: #FFFFFF;
+}
+
+.admin-navbar__user {
+  border-top: 1px solid #00000010;
+  padding: 35px 35px 0;
+}
+
+.admin-navbar::-webkit-scrollbar {
+  width: 4px;
+  background: #f2f2f2;
+  border-radius: 4px;
+}
+
+.admin-navbar::-webkit-scrollbar-thumb {
+  background: #44c373;
+  border-radius: 4px;
+}
+
+.admin-panel {
+  padding: 0 0 20px 270px;
+}
+
+.admin-navigation {
+  background: #FFFFFF;
+  margin-bottom: 30px;
+  padding: 106px 0 0;
+}
+
+.admin-navigation ul {
+  display: flex;
+}
+
+.admin-navigation ul a {
+  font-weight: 600;
+  opacity: 0.5;
+  color: #202020;
+  position: relative;
+  display: inline-block;
+  margin: 0 80px 12px 0;
+}
+
+.admin-navigation ul a:hover {
+  color: #44c373;
+  opacity: 1;
+}
+
+.admin-navigation ul a.active {
+  opacity: 1;
+}
+
+.admin-navigation ul a.active:after {
+  content: '';
+  width: 100%;
+  height: 5px;
+  border-radius: 19px;
+  background: #44c373;
+  position: absolute;
+  left: 0;
+  bottom: -12px;
+}
+
+.card {
+  border: none;
+}
+
+.card-header {
+  padding: 0;
+  background: #F8F8F8;
+  border-radius: 8px 8px 0px 0px;
+  border: none;
+  padding: 20px;
+}
+
+.card-body {
+  padding: 20px;
+  border: none;
+}
+
+.card-body img {
+  border-radius: 8px;
+}
+
+.table {
+  margin: 20px 0 0;
+}
+
+.table th:first-child {
+  width: 50px;
+}
+
+.table th:nth-child(2) {
+  width: 85px;
+}
+
+.table td {
+  vertical-align: middle;
+}
+
+.table td:nth-child(2) {
+  white-space: nowrap;
+}
+
+.table td:last-child {
+  white-space: nowrap;
+}
+
+.table img {
+  width: 100%;
+  max-width: 150px;
+  height: 40px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.table img.icon {
+  width: 40px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.card {
+  margin-bottom: 20px;
+}
+
+label {
+  margin: 0 0 20px;
+  display: block;
+  color: #828282;
+  font-size: 14px;
+}
+
+label img {
+  display: block;
+  margin: 20px 0;
+}
+
+input,
+select {
+  width: 100%;
+  border: 1px solid #E0E0E0;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  margin: 4px 0 0;
+  padding: 2px 16px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+input:focus,
+select:focus {
+  outline: none;
+  border: 1px solid #44c373;
+}
+
+select {
+  background-image: url(/images/select.svg?06e9b87ef1d6f05e021915a8031c51bc);
+  background-position: center right 10px;
+  background-repeat: no-repeat;
+}
+
+textarea {
+  width: 100%;
+  border: 1px solid #E0E0E0;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  height: 300px;
+  margin: 4px 0 0;
+  padding: 2px 16px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  resize: none;
+}
+
+textarea:focus {
+  outline: none;
+  border: 1px solid #44c373;
+}
+
+input[type="file"] {
+  border: none;
+  padding: 0;
+  border-radius: 0;
+}
+
+.input-file {
+  position: relative;
+  cursor: pointer;
+}
+
+.input-file:before {
+  content: 'Выберите файл';
+  background: #FFFFFF;
+  box-shadow: inset 0px -2px 2px rgba(185, 185, 185, 0.3);
+  border-radius: 38px;
+  color: #44c373;
+  position: absolute;
+  left: 0;
+  padding: 9px 22px;
+  cursor: pointer;
+}
+
+.input-file input[type="file"] {
+  opacity: 0;
+  cursor: pointer;
+}
+
+.input-file #file-name {
+  position: absolute;
+  left: 174px;
+  top: 8px;
+  font-size: 16px;
+}
+
+.checkbox {
+  font-size: 14px;
+  margin: 0 0 10px;
+}
+
+.checkbox input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.checkbox__text {
+  position: relative;
+  padding: 0 0 0 30px;
+  cursor: pointer;
+}
+
+.checkbox__text:before {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+  border: 1px solid #E0E0E0;
+}
+
+.checkbox__text:after {
+  content: url(/images/check.svg?7b749f8342012ce5175b8abef29996a4);
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  opacity: 0;
+}
+
+.checkbox input:checked + .checkbox__text:before {
+  background: #44c373;
+  border: 1px solid #44c373;
+}
+
+.checkbox input:checked + .checkbox__text:after {
+  opacity: 1;
+}
+
+.radio {
+  margin: 0;
+  height: 100%;
+}
+
+.radio input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  margin: 10px 0 0 7px;
+  height: auto;
+}
+
+.radio__text {
+  position: relative;
+  cursor: pointer;
+  text-align: center;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+
+.radio input:checked + .radio__text {
+  color: #44c373;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 3px rgba(64, 94, 72, 0.1);
+}
+
+.composition {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.composition .checkbox {
+  width: 25%;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+@media (max-width: 1199px) {
+  .admin-navbar {
+    width: 100%;
+    height: 60px;
+    padding: 10px 15px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .admin-navbar .custom-logo {
+    width: 100px;
+    margin: 0 10px 0 0;
+  }
+  .admin-navbar__menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .admin-navbar__menu ul {
+    display: flex;
+    align-items: center;
+    margin: 0;
+  }
+  .admin-navbar__link {
+    padding: 8px;
+    background-image: none;
+    text-align: center;
+  }
+  .admin-navbar__link.active {
+    background-image: none;
+  }
+  .admin-navbar__link span {
+    position: static;
+  }
+  .admin-navbar__link svg {
+    display: none;
+  }
+  .admin-navbar__user {
+    padding: 0;
+    border: none;
+  }
+  .admin-navbar__user ul {
+    margin: 0;
+  }
+  .admin-navbar .user-logout span {
+    display: none;
+  }
+  .admin-panel {
+    padding: 0;
+  }
+  .composition .checkbox {
+    width: 33%;
+  }
+}
+
+@media (max-width: 991px) {
+  .composition .checkbox {
+    width: 50%;
+  }
+}
+
+@media (max-width: 767px) {
+  h1 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  h2 {
+    font-size: 18px;
+  }
+  .container-sm,
+  .container {
+    max-width: 100%;
+  }
+  .admin-navigation {
+    padding: 70px 0 0;
+  }
+  .admin-navigation ul a {
+    margin: 0 30px 12px 0;
+  }
+  .admin-navbar::-webkit-scrollbar {
+    height: 4px;
+  }
+  .admin-navbar__menu {
+    padding: 0;
+    margin-right: 20px;
+  }
+  .admin-navbar__link {
+    white-space: nowrap;
+  }
+  .admin-navbar__user {
+    padding-right: 20px;
+  }
+  .admin-panel {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 575px) {
+  .composition .checkbox {
+    width: 100%;
+  }
+  .admin-navigation ul a {
+    padding: 0 6px 12px 0;
+  }
+  .table-outer {
+    overflow-x: auto;
+  }
+  .table-outer::-webkit-scrollbar {
+    height: 4px;
+    background: #f2f2f2;
+    border-radius: 4px;
+  }
+  .table-outer::-webkit-scrollbar-thumb {
+    background: #44c373;
+    border-radius: 4px;
+  }
+  .table td {
+    white-space: nowrap;
+  }
+}
+
