--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -1551,6 +1551,7 @@ footer
     box-shadow: 1px 1px 4px rgba(64, 94, 72, 0.1)
     cursor: pointer
     opacity: .7
+    z-index: 1
     &:hover
         opacity: 1
 
