--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -833,6 +833,7 @@ header
         .hamburger
             margin-left: -5px
             position: relative
+            padding-top: 3px
         .custom-logo
             height: 30px
             text-align: center
@@ -850,13 +851,11 @@ header
             font-size: 16px
             font-weight: 700
             padding: 0
-            transition: .3s
             z-index: 2
             ul
                 flex-direction: column
                 align-items: center
                 margin: 0 0 150px
-                transition: .3s
                 li
                     margin-bottom: 5px
                 span
@@ -888,6 +887,7 @@ header
             display: block
             margin: -1px 0 0 -2px
             position: relative
+            padding-top: 6px
             span
                 display: none
         .address
