--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -551,6 +551,9 @@ textarea
                 top: 4px
                 left: 0
 
+    img
+        margin-bottom: 20px
+
 .vm--modal
     border-radius: 8px
 
